--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Platform streaming video terbaik - Nonton film dan video berkualitas"
+      content="Interactive Video - Pilih Jalan Ceritamu: Harga Sebuah Penundaan"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>HARGA SEBUAH PENUNDAAN-EE-05</title>
+    <title>Interactive Video - Harga Sebuah Penundaan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
